fixed header arrow alignment

--- a/style/app.scss
+++ b/style/app.scss
@@ -765,7 +765,7 @@ div.sidebar.collapsed {
   height: 30px;
   justify-content: center;
   margin-bottom: 10px;
-  margin-right: 20px;
+  margin-left: 20px;
   margin-top: 10px;
   width: 50px;
 }
